--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -37,16 +37,15 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\SortButton.cs" />
-     <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\Ticket.cs" />
      <Compile Include="Assets\Scripts\LogState.cs" />
      <Compile Include="Assets\Scripts\ClearButton.cs" />
-     <Compile Include="Assets\Scripts\ApplyButton.cs" />
+     <Compile Include="Assets\Scripts\TextFieldFeatures.cs" />
      <Compile Include="Assets\Scripts\BackButton.cs" />
      <Compile Include="Assets\Scripts\HandleActiveState.cs" />
      <Compile Include="Assets\Scripts\Search.cs" />
      <Compile Include="Assets\Scripts\GenerateButton.cs" />
      <Compile Include="Assets\Scripts\DataManager.cs" />
-     <Compile Include="Assets\Scripts\TextFieldFeatures.cs" />
      <Compile Include="Assets\Scripts\AddUser.cs" />
      <Compile Include="Assets\Scripts\DataContainer.cs" />
      <Compile Include="Assets\Scripts\Result.cs" />
